chore: bevy_render builds with wgpu 22.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,12 +120,12 @@ default = [
   "bevy_sprite",
   "bevy_sprite_picking_backend",
   "bevy_state",
-  "bevy_text",
+  # "bevy_text",
   "bevy_ui",
   "bevy_ui_picking_backend",
   "bevy_winit",
   "custom_cursor",
-  "default_font",
+  # "default_font",
   "hdr",
   "multi_threaded",
   "png",
