--- a/crates/bevy_render/Cargo.toml
+++ b/crates/bevy_render/Cargo.toml
@@ -97,12 +97,15 @@ offset-allocator = "0.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # Omit the `glsl` feature in non-WebAssembly by default.
-naga_oil = { version = "0.16", default-features = false, features = [
+naga_oil = { git = "https://github.com/mosure/naga_oil.git", branch = "burn", default-features = false, features = [
   "test_shader",
 ] }
 
+
+
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-naga_oil = "0.16"
+naga_oil = { git = "https://github.com/mosure/naga_oil.git", branch = "burn" }
 js-sys = "0.3"
 web-sys = { version = "0.3.67", features = [
   'Blob',
